# chatgpt-weather-plugin

./: .gitignore  Dockerfile  LICENSE  README.md  chatgpt_plugins_langchain_weather_mac.ipynb  pyproject.toml  requirements.txt  vercel.json
.well-known/: openapi.yaml
public/.well-known/: ai-plugin.json
server/: main.py
